# RapidStore

./: CMakeLists.txt  LICENSE  README.md  config.cfg  main.cpp  run.sh
algorithms/: BFS.cpp  BFS.hpp  CMakeLists.txt  SSSP.cpp  SSSP.hpp  WCC.cpp  WCC.hpp  pageRank.cpp  pageRank.hpp
dataset_preprocessor/: CMakeLists.txt  dataset_preprocessor.cpp  dataset_preprocessor.hpp  main.cpp  parser.cpp  parser.hpp  types.hpp
graph/: CMakeLists.txt  edge.cpp  edge.hpp  edgeStream.cpp  edgeStream.hpp
libraries/NeoGraph/: CMakeLists.txt  README.md
libraries/NeoGraph/include/: neo_index.h  neo_property.h  neo_range_ops.h  neo_range_tree.h  neo_reader_trace.h  neo_snapshot.h  neo_transaction.h  neo_tree.h  neo_tree_version.h  neo_wrapper.h  wrapper.h
libraries/NeoGraph/src/: neo_index.cpp  neo_property.cpp  neo_range_ops.cpp  neo_range_tree.cpp  neo_reader_trace.cpp  neo_snapshot.cpp  neo_transaction.cpp  neo_tree.cpp  neo_tree_version.cpp
libraries/NeoGraph/utils/: config.h  helper.h  spin_lock.cpp  spin_lock.h  thread_pool.h  types.cpp  types.h
libraries/NeoGraph/utils/art_new/: CMakeLists.txt
libraries/NeoGraph/utils/art_new/include/: art.h  art_node_iter.h  art_node_ops.h  art_node_ops_copy.h
libraries/NeoGraph/utils/art_new/src/: art.cpp  art_leaf.cpp  art_node.cpp  art_node_iter.cpp  art_node_ops.cpp  art_node_ops_copy.cpp
libraries/NeoGraph/utils/bitmap/: CMakeLists.txt
libraries/NeoGraph/utils/bitmap/include/: bitmap.h
libraries/NeoGraph/utils/bitmap/src/: bitmap.cpp
libraries/NeoGraph/utils/c_art/: CMakeLists.txt
libraries/NeoGraph/utils/c_art/include/: art.h  art_iter.h  art_leaf.h  art_node.h  art_node_ops.h  art_node_ops_copy.h  helper.h
libraries/NeoGraph/utils/c_art/src/: art.cpp  art_iter.cpp  art_leaf.cpp  art_node_ops.cpp  art_node_ops_copy.cpp
readers/: CMakeLists.txt  edgeListReader.cpp  edgeListReader.hpp  reader.cpp  reader.hpp  vertexReader.cpp  vertexReader.hpp
types/: .uuid  types.hpp
utils/: .uuid  CMakeLists.txt  commandLineParser.cpp  commandLineParser.hpp  error_type.cpp  error_type.hpp
utils/log/: .uuid  log.cpp  log.h
wrapper/: CMakeLists.txt  README.md  driver.h  driver_main.h  wrapper.h
wrapper/algorithms/: .uuid  BFS.h  PR.h  SSSP.h  TC.h  TC_opt.h  WCC.h
wrapper/apps/aspen_wrapper/: .uuid  aspen_wrapper.cpp  aspen_wrapper.h
wrapper/apps/csr_wrapper/: csr_wrapper.cpp  csr_wrapper.h
wrapper/apps/livegraph/: .uuid  livegraph_wrapper.cpp  livegraph_wrapper.h
wrapper/apps/neo_wrapper/: neo_wrapper.cpp  neo_wrapper.h
wrapper/apps/sortledton_wrapper/: .uuid  sortledton_wrapper.cpp  sortledton_wrapper.h
wrapper/apps/teseo_wrapper/: .uuid  teseo_wrapper.cpp  teseo_wrapper.h
